--- a/src/theme/components/mana-icon.scss
+++ b/src/theme/components/mana-icon.scss
@@ -1,6 +1,6 @@
 .mana-icon-holder {
-  width: $mana-icon-size;
-  height: $mana-icon-size;
+  width: $mana-icon-normal-size;
+  height: $mana-icon-normal-size;
   display: inline-block;
   border-radius: 50%;
   overflow: hidden;
@@ -19,30 +19,30 @@
     }
 
     .mana-icon {
-      width: $mana-icon-size;
-      height: $mana-icon-size;
-      background-size: $full-sized-icon-background-size;
+      width: $mana-icon-normal-size;
+      height: $mana-icon-normal-size;
+      background-size: $mana-icon-full-background-size;
       cursor: pointer;
       opacity: 0.3;
 
       &.white {
-        background-position: -138.5px $main-colour-row-depth;
+        background-position: -138.5px $mana-icon-full-colour-row-depth;
       }
 
       &.blue {
-        background-position: -173.3px $main-colour-row-depth;
+        background-position: -173.3px $mana-icon-full-colour-row-depth;
       }
 
       &.red {
-        background-position: -242.7px $main-colour-row-depth;
+        background-position: -242.7px $mana-icon-full-colour-row-depth;
       }
 
       &.green {
-        background-position: -277.3px $main-colour-row-depth;
+        background-position: -277.3px $mana-icon-full-colour-row-depth;
       }
 
       &.black {
-        background-position: -208px $main-colour-row-depth;
+        background-position: -208px $mana-icon-full-colour-row-depth;
       }
     }
   }
@@ -54,54 +54,268 @@
     .mana-icon {
       width: $mana-icon-small-size;
       height: $mana-icon-small-size;
-      background-size: $small-sized-icon-background-size;
-
+      background-size: $mana-icon-small-background-size;
+      // Colours
       &.white {
-        background-position: -90.5px $small-colour-row-depth;
+        background-position: -90.5px $mana-icon-small-colour-row-depth;
       }
 
       &.blue {
-        background-position: -113px $small-colour-row-depth;
+        background-position: -113px $mana-icon-small-colour-row-depth;
       }
 
       &.red {
-        background-position: -157.7px $small-colour-row-depth;
+        background-position: -157.7px $mana-icon-small-colour-row-depth;
       }
 
       &.green {
-        background-position: -180.3px $small-colour-row-depth;
+        background-position: -180.3px $mana-icon-small-colour-row-depth;
       }
 
       &.black {
-        background-position: -135px $small-colour-row-depth;
+        background-position: -135px $mana-icon-small-colour-row-depth;
+      }
+      // Numbers (0-20)
+      &.icon-0 {
+        background-position: 0 $mana-icon-small-first-number-row-depth;
       }
 
       &.icon-1 {
-        background-position: -22.5px $first-number-row-depth;
+        background-position: -22.5px $mana-icon-small-first-number-row-depth;
       }
 
       &.icon-2 {
-        background-position: -45.5px $first-number-row-depth;
+        background-position: -45.5px $mana-icon-small-first-number-row-depth;
       }
 
       &.icon-3 {
-        background-position: -68px $first-number-row-depth;
+        background-position: -68px $mana-icon-small-first-number-row-depth;
       }
 
       &.icon-4 {
-        background-position: -90.5px $first-number-row-depth;
+        background-position: -90.5px $mana-icon-small-first-number-row-depth;
       }
 
       &.icon-5 {
-        background-position: -112.7px $first-number-row-depth;
+        background-position: -112.7px $mana-icon-small-first-number-row-depth;
       }
 
       &.icon-6 {
-        background-position: -135.7px $first-number-row-depth;
+        background-position: -135.7px $mana-icon-small-first-number-row-depth;
       }
 
+      &.icon-7 {
+        background-position: -157.7px $mana-icon-small-first-number-row-depth;
+      }
+
+      &.icon-8 {
+        background-position: -180.3px $mana-icon-small-first-number-row-depth;
+      }
+
+      &.icon-9 {
+        background-position: -203px $mana-icon-small-first-number-row-depth;
+      }
+
+      &.icon-10 {
+        background-position: 0 $mana-icon-small-second-number-row-depth;
+      }
+
+      &.icon-11 {
+        background-position: -23px $mana-icon-small-second-number-row-depth;
+      }
+
+      &.icon-12 {
+        background-position: -45px $mana-icon-small-second-number-row-depth;
+      }
+
+      &.icon-13 {
+        background-position: -68px $mana-icon-small-second-number-row-depth;
+      }
+
+      &.icon-14 {
+        background-position: -90px $mana-icon-small-second-number-row-depth;
+      }
+
+      &.icon-15 {
+        background-position: -113px $mana-icon-small-second-number-row-depth;
+      }
+
+      &.icon-16 {
+        background-position: -135px $mana-icon-small-second-number-row-depth;
+      }
+
+      &.icon-17 {
+        background-position: -158px $mana-icon-small-second-number-row-depth;
+      }
+
+      &.icon-18 {
+        background-position: -180px $mana-icon-small-second-number-row-depth;
+      }
+
+      &.icon-19 {
+        background-position: -203px $mana-icon-small-second-number-row-depth;
+      }
+
+      &.icon-20 {
+        background-position: 0 $mana-icon-small-colour-row-depth;
+      }
+      // Icons
       &.icon-X {
-        background-position: -68px $small-colour-row-depth;
+        background-position: -23px $mana-icon-small-colour-row-depth;
+      }
+
+      &.icon-Y {
+        background-position: -45px $mana-icon-small-colour-row-depth;
+      }
+
+      &.icon-Z {
+        background-position: -68px $mana-icon-small-colour-row-depth;
+      }
+
+      &.icon-T {
+        background-position: 0 $mana-icon-small-tap-row-depth;
+      }
+
+      &.icon-Q {
+        background-position: -23px $mana-icon-small-tap-row-depth;
+      }
+    }
+  }
+
+  &.extra-small {
+    width: $mana-icon-extra-small-size;
+    height: $mana-icon-extra-small-size;
+    margin-right: 2px;
+    position: relative;
+    top: 3px;
+
+    .mana-icon {
+      width: $mana-icon-extra-small-size;
+      height: $mana-icon-extra-small-size;
+      background-size: $mana-icon-extra-small-background-size;
+      // Colours
+      &.white {
+        background-position: -59.5px $mana-icon-extra-small-colour-row-depth;
+      }
+
+      &.blue {
+        background-position: -74px $mana-icon-extra-small-colour-row-depth;
+      }
+
+      &.red {
+        background-position: -103.7px $mana-icon-extra-small-colour-row-depth;
+      }
+
+      &.green {
+        background-position: -118.3px $mana-icon-extra-small-colour-row-depth;
+      }
+
+      &.black {
+        background-position: -89px $mana-icon-extra-small-colour-row-depth;
+      }
+      // Numbers (0-20)
+      &.icon-0 {
+        background-position: 0 $mana-icon-extra-small-first-number-row-depth;
+      }
+
+      &.icon-1 {
+        background-position: -14.5px $mana-icon-extra-small-first-number-row-depth;
+      }
+
+      &.icon-2 {
+        background-position: -29.5px $mana-icon-extra-small-first-number-row-depth;
+      }
+
+      &.icon-3 {
+        background-position: -44.5px $mana-icon-extra-small-first-number-row-depth;
+      }
+
+      &.icon-4 {
+        background-position: -59.5px $mana-icon-extra-small-first-number-row-depth;
+      }
+
+      &.icon-5 {
+        background-position: -73.7px $mana-icon-extra-small-first-number-row-depth;
+      }
+
+      &.icon-6 {
+        background-position: -88.7px $mana-icon-extra-small-first-number-row-depth;
+      }
+
+      &.icon-7 {
+        background-position: -103.7px $mana-icon-extra-small-first-number-row-depth;
+      }
+
+      &.icon-8 {
+        background-position: -118px $mana-icon-extra-small-first-number-row-depth;
+      }
+
+      &.icon-9 {
+        background-position: -132.7px $mana-icon-extra-small-first-number-row-depth;
+      }
+
+      &.icon-10 {
+        background-position: 0 $mana-icon-extra-small-second-number-row-depth;
+      }
+
+      &.icon-11 {
+        background-position: -15px $mana-icon-extra-small-second-number-row-depth;
+      }
+
+      &.icon-12 {
+        background-position: -30px $mana-icon-extra-small-second-number-row-depth;
+      }
+
+      &.icon-13 {
+        background-position: -44px $mana-icon-extra-small-second-number-row-depth;
+      }
+
+      &.icon-14 {
+        background-position: -59px $mana-icon-extra-small-second-number-row-depth;
+      }
+
+      &.icon-15 {
+        background-position: -74px $mana-icon-extra-small-second-number-row-depth;
+      }
+
+      &.icon-16 {
+        background-position: -89px $mana-icon-extra-small-second-number-row-depth;
+      }
+
+      &.icon-17 {
+        background-position: -103px $mana-icon-extra-small-second-number-row-depth;
+      }
+
+      &.icon-18 {
+        background-position: -118px $mana-icon-extra-small-second-number-row-depth;
+      }
+
+      &.icon-19 {
+        background-position: -133px $mana-icon-extra-small-second-number-row-depth;
+      }
+
+      &.icon-20 {
+        background-position: 0 $mana-icon-extra-small-colour-row-depth;
+      }
+      // Icons
+      &.icon-X {
+        background-position: -15px $mana-icon-extra-small-colour-row-depth;
+      }
+
+      &.icon-Y {
+        background-position: -30px $mana-icon-extra-small-colour-row-depth;
+      }
+
+      &.icon-Z {
+        background-position: -44px $mana-icon-extra-small-colour-row-depth;
+      }
+
+      &.icon-T {
+        background-position: 0 $mana-icon-extra-small-tap-row-depth;
+      }
+
+      &.icon-Q {
+        background-position: -14px $mana-icon-extra-small-tap-row-depth;
       }
     }
   }
