--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -10,12 +10,22 @@ $card-border-radius: 12px;
 $card-details-font-size: 12px;
 $card-details-line-height: 16px;
 $card-details-power-toughness-font-size: 18px;
-// Mana Icons
-$mana-icon-size: 37px;
+/*-- Mana Icons --*/
+// Full Icons
+$mana-icon-normal-size: 37px;
+$mana-icon-full-background-size: 345px 241px;
+$mana-icon-full-colour-row-depth: -69.4px;
+// Small Icons
 $mana-icon-small-size: 25px;
-$main-colour-row-depth: -69.4px;
-$small-colour-row-depth: -45.4px;
-$first-number-row-depth: 0;
-$full-sized-icon-background-size: 345px 241px;
-$small-sized-icon-background-size: 224px 156.5px;
-
+$mana-icon-small-background-size: 224px 156.5px;
+$mana-icon-small-colour-row-depth: -45.4px;
+$mana-icon-small-tap-row-depth: -113.4px;
+$mana-icon-small-first-number-row-depth: 0;
+$mana-icon-small-second-number-row-depth: -23px;
+// Extra Small Icons
+$mana-icon-extra-small-size: 18px;
+$mana-icon-extra-small-background-size: 147.4px 103px;
+$mana-icon-extra-small-colour-row-depth: -29.4px;
+$mana-icon-extra-small-tap-row-depth: -74.4px;
+$mana-icon-extra-small-first-number-row-depth: 0;
+$mana-icon-extra-small-second-number-row-depth: -15px;
