--- a/src/theme/components/mana-icon.scss
+++ b/src/theme/components/mana-icon.scss
@@ -75,6 +75,46 @@
       &.black {
         background-position: -135px $mana-icon-small-colour-row-depth;
       }
+      // Mixed Colours
+      &.white-blue {
+        background-position: 0 $mana-icon-small-dual-colour-row-depth;
+      }
+
+      &.white-black {
+        background-position: -23px $mana-icon-small-dual-colour-row-depth;
+      }
+
+      &.blue-black {
+        background-position: -45px $mana-icon-small-dual-colour-row-depth;
+      }
+
+      &.blue-red {
+        background-position: -68px $mana-icon-small-dual-colour-row-depth;
+      }
+
+      &.black-red {
+        background-position: -90px $mana-icon-small-dual-colour-row-depth;
+      }
+
+      &.black-green {
+        background-position: -113px $mana-icon-small-dual-colour-row-depth;
+      }
+
+      &.red-white {
+        background-position: -135px $mana-icon-small-dual-colour-row-depth;
+      }
+
+      &.red-green {
+        background-position: -158px $mana-icon-small-dual-colour-row-depth;
+      }
+
+      &.green-white {
+        background-position: -180px $mana-icon-small-dual-colour-row-depth;
+      }
+
+      &.green-blue {
+        background-position: -203px $mana-icon-small-dual-colour-row-depth;
+      }
       // Numbers (0-20)
       &.icon-0 {
         background-position: 0 $mana-icon-small-first-number-row-depth;
@@ -212,6 +252,46 @@
 
       &.black {
         background-position: -89px $mana-icon-extra-small-colour-row-depth;
+      }
+      // Mixed Colours
+      &.white-blue {
+        background-position: 0 $mana-icon-extra-small-dual-colour-row-depth;
+      }
+
+      &.white-black {
+        background-position: -15px $mana-icon-extra-small-dual-colour-row-depth;
+      }
+
+      &.blue-black {
+        background-position: -30px $mana-icon-extra-small-dual-colour-row-depth;
+      }
+
+      &.blue-red {
+        background-position: -44px $mana-icon-extra-small-dual-colour-row-depth;
+      }
+
+      &.black-red {
+        background-position: -59px $mana-icon-extra-small-dual-colour-row-depth;
+      }
+
+      &.black-green {
+        background-position: -74px $mana-icon-extra-small-dual-colour-row-depth;
+      }
+
+      &.red-white {
+        background-position: -89px $mana-icon-extra-small-dual-colour-row-depth;
+      }
+
+      &.red-green {
+        background-position: -104px $mana-icon-extra-small-dual-colour-row-depth;
+      }
+
+      &.green-white {
+        background-position: -118px $mana-icon-extra-small-dual-colour-row-depth;
+      }
+
+      &.green-blue {
+        background-position: -133px $mana-icon-extra-small-dual-colour-row-depth;
       }
       // Numbers (0-20)
       &.icon-0 {
