--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -20,6 +20,7 @@ $mana-icon-small-size: 25px;
 $mana-icon-small-background-size: 224px 156.5px;
 $mana-icon-small-colour-row-depth: -45.4px;
 $mana-icon-small-dual-colour-row-depth: -68px;
+$mana-icon-small-mono-colour-row-depth: -90px;
 $mana-icon-small-tap-row-depth: -113.4px;
 $mana-icon-small-first-number-row-depth: 0;
 $mana-icon-small-second-number-row-depth: -23px;
@@ -28,6 +29,7 @@ $mana-icon-extra-small-size: 18px;
 $mana-icon-extra-small-background-size: 147.4px 103px;
 $mana-icon-extra-small-colour-row-depth: -29.4px;
 $mana-icon-extra-small-dual-colour-row-depth: -45px;
+$mana-icon-extra-small-mono-colour-row-depth: -59px;
 $mana-icon-extra-small-tap-row-depth: -74.4px;
 $mana-icon-extra-small-first-number-row-depth: 0;
 $mana-icon-extra-small-second-number-row-depth: -15px;
