--- a/src/app/card-library/components/card-preview/card-preview.component.scss
+++ b/src/app/card-library/components/card-preview/card-preview.component.scss
@@ -22,6 +22,7 @@ app-card-preview {
     top: $card-height;
     left: 0;
     background: rgba($main-black, 0.7);
+    backdrop-filter: blur(3px);
     padding: 14px;
     cursor: pointer;
     user-select: none;
