--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -2,6 +2,7 @@ $main-black: #000;
 $main-white: #FFF;
 $light-grey: #dee2e6;
 $main-logo-width: 50px;
+$theme-background: #1e1e1e;
 // Cards
 $card-background: #3d3d3d;
 $card-width: 225px;
