--- a/src/theme/components/mana-icon.scss
+++ b/src/theme/components/mana-icon.scss
@@ -10,7 +10,7 @@
 
   .mana-icon {
     display: inline-block;
-    background-image: url('/assets/images/mana.svg');
+    background-image: url('/images/mana.svg');
   }
 
   &.nav {
