Fixing spelling mistake

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -6,7 +6,7 @@
     --light-grey: #dee2e6;
     --main-logo-width: 50px;
     --theme-background: #1e1e1e;
-    --thheme-backgroundrgb: 30, 30, 30;
+    --theme-backgroundrgb: 30, 30, 30;
 
     --card-background: #3d3d3d;
     --card-backgroundrgb: 61, 61, 61;
