--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,4 @@
+@import "primeicons/primeicons.css";
 @import url('./theme/variables.css');
 @import url('./theme/global.css');
 @import url('./theme/typography.css');
