--- a/src/app/card-library/components/card-preview/card-preview.component.html
+++ b/src/app/card-library/components/card-preview/card-preview.component.html
@@ -1,40 +1,40 @@
 <div class="product-grid-item card">
   <div class="product-grid-item-content" (click)="emitFullDetails(cardDetails)">
-    @if (cardDetails.imageUrl) {
+     @if (cardDetails.image_uris) {
       <div class="card-preview">
         <img
-          [src]="cardDetails.imageUrl"
+          [src]="cardDetails.image_uris.normal"
           [alt]="cardDetails.name"
           [title]="cardDetails.name" />
       </div>
     }
-    @if (!cardDetails.imageUrl) {
+    @if (!cardDetails.image_uris) {
       <div class="card-placeholder">
         <img
           src="https://upload.wikimedia.org/wikipedia/en/a/aa/Magic_the_gathering-card_back.jpg"
           alt="MTG Blank Card" />
       </div>
     }
-    <section class="card-details" [class.no-card-image]="!cardDetails.imageUrl">
+    <section class="card-details" [class.no-card-image]="!cardDetails.image_uris">
       <h3 class="text-lg">{{cardDetails.name}}</h3>
-      @if (cardDetails.manaCost) {
+      @if (cardDetails.mana_cost) {
         <p class="mana-details">
           <span class="cost-label">Cost:&nbsp;</span>
-          <span [innerHTML]="cardDetails.manaCost | manaCost: 'cost'"></span>
+          <span [innerHTML]="cardDetails.mana_cost | manaCost: 'cost'"></span>
         </p>
       }
-      <p class="type-details">{{cardDetails.type}}</p>
+      <p class="type-details">{{cardDetails.type_line}}</p>
       <p>
-        @if (cardDetails.text) {
+        @if (cardDetails.oracle_text) {
           <small>
-            <span [innerHTML]="cardDetails.text | manaCost:'inline'"></span>
-            @if (cardDetails.flavor) {
-              <em> - {{cardDetails.flavor}}</em>
+            <span [innerHTML]="cardDetails.oracle_text | manaCost:'inline'"></span>
+            @if (cardDetails.flavor_text) {
+              <em> - {{cardDetails.flavor_text}}</em>
             }
           </small>
         }
       </p>
-      @if (cardDetails.types.includes('Creature')) {
+      @if (cardDetails.type_line.includes('Creature') && cardDetails.power && cardDetails.toughness) {
         <p>
           <span class="power-toughness-holder">
             <span title="Power">
@@ -49,6 +49,6 @@
           </span>
         </p>
       }
-    </section>
+    </section> 
   </div>
 </div>
